# Renderings

./: build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
app/: Android.bp  CMakeLists.txt  build.gradle  build.gradle.kts  settings.gradle
app/lGlue/: los_android_native_app_glue.c  los_android_native_app_glue.h
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: gameRender.cpp  gameRender.h  mathand.pcm  nextExtension.h  renderingStart.cpp
app/src/main/cpp/AudioEngines/: AudioMain.cpp  AudioMain.h
app/src/main/cpp/mainLos/: LosMainVulkan.cpp  LosMainVulkan.h  ShaderData.h  assetsLos.c  assetsLos.h  logLos.h
app/src/main/java/com/sergey/los/freelanceideas/renderings/: MainActivity.kt  RenderActiv.kt
app/tests/src/: Android.bp  renderingStart_test.cpp
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
